1998-10-28  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* BernoulliDist.m, ExponentialDist.m, GammaDist.m,
	LogNormalDist.m, NormalDist.m, RandomBitDist.m,
	UniformDoubleDist.m, UniformIntegerDist.m, UniformUnsignedDist.m:

	* ACGgen.m, C2LCGXgen.m, C2MRG3gen.m, C2TAUSgen.m, C3MRG3gen.m,
	C4LCGXgen.m, LCGgen.m, MRGgen.m, MT19937gen.m, MWCAgen.m,
	MWCBgen.m, PMMLCGgen.m, PSWBgen.m, RWC2gen.m, RWC8gen.m, SCGgen.m,
	SWBgen.m, TGFSRgen.m: Make i, j, and g unsigned in -setState,
	-putStateInto, initState:, -describe:, and setStateFrom: (some of
	these cases don't exist).  Use %u instead of %d as appropriate.
	New method -reset.  Reformatting throughout.
	
	* C2MRG3gen.h (C2MRG3gen): Make k unsigned.

	* C2LCGXgen.h, C2MRG3gen.h, C2TAUSgen.h, C4LCGXgen.h (COMPONENTS,
	SEEDS): Make unsigned.

	* ACgen.h, BernoulliDist.h, C2LCGXgen.h, C2MRG3gen.h, C2TAUSgen.h,
	C3MWCgen.h, C4LCGXgen.h, ExponentialDist.h, GammaDist.h, LCGgen.h,
	LogNormalDist.h, MRGgen.h, MT19937gen.h, MWCAgen.h, MWCBgen.h,
	NormalDist.h, PMMLCGgen.h, PSWBgen.h, RWC2gen.h, RWC8gen.h,
	RandomBitDist.h, SCGgen.h, SWBgen.h, TGFSRgen.h,
	UniformDoubleDist.h, UniformIntegerDist.h, UniformUnsignedDist.h:
	Add creating, setting, and using phases.

	* ACGgen.h, C2MRG3gen.h, C2TAUSgen.h, C3MWCgen.h, LCGgen.h,
	MRGgen.h, MT19937gen.h, MWCAgen.h, MWCBgen.h, PSWBgen.h, SCGgen.h,
	SWBgen.h, TGFSRgen.h (ACGgen, C2MRG3gen, C2TAUS[123]gen, C3MWCgen,
	LCGgen[123], MRG[567]gen, MT19937gen, MWCAgen, MWCBgen,
	PMMLCG[123456789], PSWBgen, RWC2gen, RWC8gen, SCGgen, SWB[123]gen,
	TT403gen, TT775gen, TT800gen): Conform to SimpleRandomGenerator
	and CREATABLE.

	* C2TAUSgen.h, LCGgen.h, MRGgen.h, PMMLCGgen.h, SWBgen.h, TGFSRgen.h
	(C2TAUSgen, LCGgen, MRGgen, PMMLCGgen, SWBgen, TGFSRgen): Conform to
	SimpleRandomGenerator.

	* C2LCGXgen.h, C4LCGXgen.h (C2LCGXgen, C4LCGXgen): Conform to
	SplitRandomGenerator and CREATABLE.

	* BernoulliDist.h, ExponentialDist.h, GammDist.h, LogNormalDist.h,